rename channels id

--- a/templates/config-wb-mio.json.jinja
+++ b/templates/config-wb-mio.json.jinja
@@ -70,7 +70,7 @@
         ],
         "channels": [
             {
-                "id": "status_DI1",
+                "id": "di_1_status",
                 "name": "Status DI 1",
                 "read_only": true,
                 "reg_type": "input",
@@ -80,7 +80,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DI2",
+                "id": "di_2_status",
                 "name": "Status DI 2",
                 "read_only": true,
                 "reg_type": "input",
@@ -90,7 +90,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DI3",
+                "id": "di_3_status",
                 "name": "Status DI 3",
                 "read_only": true,
                 "reg_type": "input",
@@ -100,7 +100,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DI4",
+                "id": "di_4_status",
                 "name": "Status DI 4",
                 "read_only": true,
                 "reg_type": "input",
@@ -110,7 +110,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DO1",
+                "id": "do_1_status",
                 "name": "Status DO 1",
                 "read_only": true,
                 "reg_type": "input",
@@ -120,7 +120,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DO2",
+                "id": "do_2_status",
                 "name": "Status DO 2",
                 "read_only": true,
                 "reg_type": "input",
@@ -130,7 +130,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DO3",
+                "id": "do_3_status",
                 "name": "Status DO 3",
                 "read_only": true,
                 "reg_type": "input",
@@ -140,7 +140,7 @@
                 "group": "general"
             },
             {
-                "id": "status_DO4",
+                "id": "do_4_status",
                 "name": "Status DO 4",
                 "read_only": true,
                 "reg_type": "input",
