--- a/templates/config-wb-mio.json.jinja
+++ b/templates/config-wb-mio.json.jinja
@@ -240,7 +240,7 @@
                 "Status DO 1":"Статус DO 1",
                 "Status DO 2":"Статус DO 2",
                 "Status DO 3":"Статус DO 3",
-                "Status DO 4":"Статус DO 4",
+                "Status DO 4":"Статус DO 4"
             }
         }
     }
