--- a/templates/config-wb-mio.json.jinja
+++ b/templates/config-wb-mio.json.jinja
@@ -202,7 +202,7 @@
         "translations": {
             "en": {
                 "template_title": "{{ title_en }}",
-                "g_general_description": "To control WBIO input/output modules, add a device manually and select the template for the corresponding module (its name starts with WBIO-...).<br>In the “Device address” field, specify the WBIO address in the format <b>Modbus gateway address: WBIO index</b>, for example, 15:1.",
+                "g_general_description": "To control WBIO input/output modules, add a device manually and select the template for the corresponding module (its name starts with WBIO-...).<br>In the “Device address” field, specify the WBIO address in the format Modbus gateway address: WBIO index, for example, 15:1.",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "enum_led_enabled": "Enabled",
                 "enum_led_disabled": "Disabled",
@@ -214,7 +214,7 @@
             },
             "ru": {
                 "template_title": "{{ title_ru }}",
-                "g_general_description": "Чтобы управлять модулями ввода-вывода WBIO, вручную добавьте устройство и выберите шаблон соответствующего модуля (его имя начинается с WBIO-...).<br>В поле «Адрес устройства» укажите адрес WBIO в формате <b>Modbus-адрес шлюза: порядковый номер WBIO</b>, например, 15:1.",
+                "g_general_description": "Чтобы управлять модулями ввода-вывода WBIO, вручную добавьте устройство и выберите шаблон соответствующего модуля (его имя начинается с WBIO-...).<br>В поле «Адрес устройства» укажите адрес WBIO в формате Modbus-адрес шлюза: порядковый номер WBIO, например, 15:1.",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
                 "Debug": "Диагностика",
