[FW-789] Set minimal template fw version as 2.2.0

--- a/templates/config-wb-mai6-fw-2.2.json.jinja
+++ b/templates/config-wb-mai6-fw-2.2.json.jinja
@@ -28,7 +28,8 @@
 {% if has_signature %}
     "hw": [
         {
-            "signature": "WBMAI6"
+            "signature": "WBMAI6",
+            "fw": "2.2.0"
         }
     ],
 {% endif %}
