--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -1,4 +1,5 @@
 {% set CHANNELS_NUMBER = 3 -%}
+{% set SEND_QUEUE_SIZE = 10 -%}
 {
     "title": "WB-MDALI_template_title",
     "device_type": "WB-MDALI",
@@ -13,7 +14,6 @@
         "id": "wb-mdali",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
-        "frame_timeout_ms": 8,
         "enable_wb_continuous_read": true,
 
         "groups": [
@@ -88,8 +88,7 @@
                 "address": {{ 1815 + ch }},
                 "type": "switch",
                 "format": "u16",
-                "sporadic": true,
-                "enabled": false,
+                "enabled": true,
                 "group": "g_transparent_mode"
             },
             {
@@ -104,6 +103,40 @@
                 "group": "g_transparent_mode"
             },
             {
+                "name": "channel{{ ch + 1 }}_send_pointer",
+                "id": "channel{{ ch + 1 }}_send_pointer",
+                "reg_type": "holding",
+                "address": 1960,
+                "type": "value",
+                "format": "u16",
+                "enabled": true,
+                "sporadic" : true,
+                "group": "g_transparent_mode"
+            },
+            {% for item in range(SEND_QUEUE_SIZE) -%}
+            {
+                "name": "channel{{ ch + 1 }}_reply{{ item }}",
+                "id": "channel{{ ch + 1 }}_reply{{ item }}",
+                "reg_type": "input",
+                "address": {{ 1970 + item }},
+                "type": "value",
+                "format": "u16",
+                "enabled": true,
+                "sporadic" : true,
+                "group": "g_transparent_mode"
+            },
+            {% endfor -%}
+            {
+                "name": "channel{{ ch + 1 }}_txrx",
+                "reg_type": "holding",
+                "address": 1900,
+                "type": "value",
+                "format": "u16",
+                "enabled": true,
+                "sporadic" : true,
+                "group": "g_transparent_mode"
+            },
+            {
                 "name": "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned",
                 "id": "channel{{ ch + 1 }}_receive_24bit_forward",
                 "reg_type": "input",
@@ -111,7 +144,7 @@
                 "type": "value",
                 "format": "u32",
                 "sporadic": true,
-                "enabled": false,
+                "enabled": true,
                 "group": "g_transparent_mode"
             },
             {
@@ -140,7 +173,6 @@
                 "address": {{ 1880 + ch }},
                 "type": "switch",
                 "format": "u16",
-                "sporadic": true,
                 "enabled": false,
                 "group": "g_transparent_mode"
             },
@@ -205,30 +237,10 @@
                 "group": "g_error_counters"
             },
             {
-                "name": "Channel {{ ch + 1 }} tx busy error counter",
+                "name": "Channel {{ ch + 1 }} previous packet is not sent error counter",
                 "id": "channel{{ ch + 1 }}_txbusy_error_counter",
                 "reg_type": "input",
                 "address": {{ 1861 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} sent frames counter",
-                "id": "channel{{ ch + 1 }}_sent_frames_counter",
-                "reg_type": "input",
-                "address": {{ 1885 + ch }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} received frames counter",
-                "id": "channel{{ ch + 1 }}_received_frames_counter",
-                "reg_type": "input",
-                "address": {{ 1890 + ch }},
                 "type": "value",
                 "format": "u16",
                 "enabled": false,
@@ -313,6 +325,15 @@
                 "units": "V",
                 "enabled": false,
                 "group": "g_hw_info"
+            },
+            {
+                "name": "reset_without_save_state",
+                "reg_type": "holding",
+                "address": 120,
+                "type": "pushbutton",
+                "format": "u16",
+                "group": "general",
+                "enabled": false
             }
         ],
         "translations": {
@@ -327,13 +348,13 @@
                 "Transparent mode": "Прозрачный режим",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
-                
+
                 {% for ch in range(CHANNELS_NUMBER) -%}
                 "Transmit 16bit forward frame over channel {{ ch + 1 }}": "Передать 16-битный forward фрейм по каналу {{ ch + 1 }}",
                 "Transmit 24bit forward frame over channel {{ ch + 1 }}, left aligned": "Передать 24-битный forward фрейм по каналу {{ ch + 1 }}, выровнен по левому краю",
                 "Channel {{ ch + 1 }} reply timeout": "Таймаут ответа канала {{ ch + 1 }}",
-                "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned": "Полученный 8-битный backward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
-                "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned": "Полученный 24-битный forward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
+                "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned": "Получен 8-битный backward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
+                "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned": "Получен 24-битный forward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
                 "24bit forward frame is received from channel {{ ch + 1 }}": "Получен 24-битный фрейм от канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bus is powered": "Шина канала {{ ch + 1 }} запитана",
                 "Channel {{ ch + 1 }} bus state changed after request": "Состояние шины канала {{ ch + 1 }} изменилось после запроса",
@@ -344,12 +365,9 @@
                 "Channel {{ ch + 1 }} stop bits are not received error counter": "Счетчик ошибок отсутствия стоп-битов канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} frame receive timeout error counter": "Счетчик ошибок таймаута приема фрейма канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bus is not powered error counter": "Счетчик ошибок незапитанности шины канала {{ ch + 1 }}",
-                "Channel {{ ch + 1 }} tx busy error counter": "Счетчик ошибок занятости шины {{ ch + 1 }}",
-
-                "Channel {{ ch + 1 }} sent frames counter": "Счетчик отправленных фреймов канала {{ ch + 1 }}",
-                "Channel {{ ch + 1 }} received frames counter": "Счетчик принятых фреймов канала {{ ch + 1 }}",
+                "Channel {{ ch + 1 }} previous packet is not sent error counter": "Счетчик ошибок неотправленности прерыдудщего фрейма канала {{ ch + 1 }}",
                 {% endfor -%}
-                
+
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
                 "Supply Voltage": "Напряжение питания",
