[FW-789] Remove '+' from template name

--- a/templates/config-wb-mai6-fw-2.2.json.jinja
+++ b/templates/config-wb-mai6-fw-2.2.json.jinja
@@ -1,5 +1,5 @@
-{% set title_en = title_en | default("WB-MAI6 fw 2.2+ (6-channel analog input module)") -%}
-{% set title_ru = title_ru | default("WB-MAI6 fw 2.2+ (6-канальный модуль аналоговых входов)") -%}
+{% set title_en = title_en | default("WB-MAI6 fw 2.2 (6-channel analog input module)") -%}
+{% set title_ru = title_ru | default("WB-MAI6 fw 2.2 (6-канальный модуль аналоговых входов)") -%}
 {% set device_type = device_type | default("WB-MAI6-since-fw-2.2") -%}
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WB-MAI6") -%}
